# transto

./: .gitignore  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  ruff.toml
test/: test_cli.py
transto/: __init__.py  auth.py  bom.py  cli.py  etrade.py  exceptions.py  hsbc.py  lib.py  main.py  mapping.py  nab.py
