[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transto"
description = "transto CLI"
dynamic = ["version"]
requires-python = ">=3.11"
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Console",
	"Natural Language :: English",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.10",
]
dependencies = [
	"click>8.1,<8.2",
	"cryptography>=3.1",
	"pandas>2.2,<2.3",
	"google-api-python-client>2,<3",
	"google-auth-httplib2==0.1.0",
	"google-auth-oauthlib>=1.2.1,<2.0",
	"gspread-dataframe>=4,<4.1",
	"gspread-formatting==1.1.2",
	"openpyxl>3.1,<3.2",
	"pypdf==4.2.0",
	"pyyaml>6",
	"pytz",
	"xlrd>2.0,<2.1",
]

[project.scripts]
transto = "transto.cli:cli"

##### Hatch

[tool.hatch.version]
path = "transto/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = ["test*", "venv*"]

[tool.hatch.metadata]
allow-direct-references = true


[tool.hatch.envs.default]
dependencies = ["ipdb"]

[tool.hatch.envs.test]
dependencies = [
	"pytest",
	"pytest-sugar",
	"pytest-mypy",
	"types-click",
]

[tool.hatch.envs.test.scripts]
test = "pytest --disable-pytest-warnings test"
mypy = "pytest --mypy transto"

[tool.hatch.envs.lint]
detached = true  # do not install package
dependencies = [
	"pylint",
]

[tool.hatch.envs.lint.scripts]
lint = "pylint transto"
